--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -357,6 +357,7 @@
     <color name="color_A65B0A">#A65B0A</color>
     <color name="color_A7B2C4">#A7B2C4</color>
     <color name="color_E8F4FF">#E8F4FF</color>
-
+    <color name="color_9CB9CF">#9CB9CF</color>
+    <color name="color_F5FAFF">#F5FAFF</color>
 
 </resources>
