--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,6 +61,7 @@
     <color name="color_FAFAFA">#FAFAFA</color>
     <color name="color_D2D2D7">#d2d2d7</color>
     <color name="color_1A1A1A">#1A1A1A</color>
+    <color name="color_F0F5FA">#F0F5FA</color>
     <color name="color_404348">#404348</color>
     <color name="color_939393">#939393</color>
     <color name="color_EAF4FE">#EAF4FE</color>
@@ -75,6 +76,8 @@
     <color name="color_33303030">#33303030</color>
     <color name="color_33DDDDDD">#33DDDDDD</color>
     <color name="color_643C00">#643C00</color>
+    <color name="color_ECCD86">#ECCD86</color>
+
     <color name="color_F5F5F5">#F5F5F5</color>
     <color name="color_7F7F7F">#7F7F7F</color>
     <color name="color_909090">#909090</color>
@@ -114,6 +117,7 @@
     <color name="color_2D2F31">#2D2F31</color>
     <color name="color_A8AFB8">#A8AFB8</color>
     <color name="color_515151">#515151</color>
+    <color name="color_a3a3a3">#a3a3a3</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
@@ -202,8 +206,9 @@
     <color name="color_242527_F1F7FE">@color/color_F1F7FE</color>
     <color name="color_303030_ecedef">@color/color_ECEDEF</color>
     <color name="color_515151_EBEBEB">@color/color_EBEBEB</color>
+    <color name="color_a3a3a3_666666">@color/color_666666</color>
 
-
+    <color name="color_2B2B2B_E2E2E2">@color/color_E2E2E2</color>
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_black_60</color>
     <color name="color_66000000_14000000">@color/transparent_black_8</color>
@@ -342,6 +347,24 @@
     <color name="color_FFFDFE">#FFFDFE</color>
     <color name="color_345577">#345577</color>
     <!-- ======================================= -->
+    <color name="color_A7B2C">#A7B2C4</color>
+    <color name="color_535D76">#535D76</color>
+    <color name="color_E3E8EE">#E3E8EE</color>
+    <color name="color_6C7BA8">#6C7BA8</color>
+    <color name="color_A5AABF">#A5AABF</color>
+    <color name="color_C4D0DE">#C4D0DE</color>
+    <color name="color_DAE7F6">#DAE7F6</color>
+    <color name="color_E23434">#E23434</color>
+    <color name="color_C9CFD7">#C9CFD7</color>
+    <color name="color_414655">#414655</color>
+    <color name="color_025BE8">#025BE8</color>
+    <color name="color_A5A9B3">#A5A9B3</color>
 
+    <color name="background">@color/color_F0F5FA</color>
+    <color name="color_A65B0A">#A65B0A</color>
+    <color name="color_A7B2C4">#A7B2C4</color>
+    <color name="color_E8F4FF">#E8F4FF</color>
+    <color name="color_9CB9CF">#9CB9CF</color>
+    <color name="color_F5FAFF">#F5FAFF</color>
 
 </resources>
