--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -358,21 +358,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_appointment"
                     android:drawablePadding="5dp"
                     android:fontFamily="@font/helvetica_bold"
-                    android:text="@string/appointment_time"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp"
+                    android:text="@string/local_time"
+                    android:textColor="@color/color_414655"
+                    android:textSize="@dimen/textSize12sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/current_time"
-                    android:textColor="@color/color_7F7F7F_999999"
-                    android:textSize="@dimen/textSize12sp" />
+
 
                 <TextView
                     android:id="@+id/tv_current_time"
@@ -392,11 +385,16 @@
                 android:background="@drawable/bg_radius_4_button_white">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/appointment_time"
+                    android:textColor="@color/color_414655"
+                    android:textSize="@dimen/textSize14sp"/>
+                <TextView
                     android:id="@+id/tv_calendar"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_calendar"
                     android:drawableRight="@drawable/ic_arrow_gray"
                     android:drawablePadding="7dp"
                     android:gravity="center_vertical"
