--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -179,9 +179,27 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/margin_16"
-                                android:layout_marginEnd="@dimen/margin_16"
+
                                 tools:listitem="@layout/item_listview_bank_card" />
                         </LinearLayout>
+
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/margin_50"
+                            android:background="@color/exo_white">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                android:drawableLeft="@drawable/ic_icon_bankcard_add"
+                                android:drawablePadding="@dimen/margin_3"
+                                android:gravity="center"
+                                android:text="添加银行"
+                                android:textColor="@color/color_025BE8"
+                                android:textSize="@dimen/textSize14sp" />
+                        </FrameLayout>
 
 
                     </LinearLayout>
@@ -421,7 +439,33 @@
                             tools:text="@string/make_sure_valid_account"
                             tools:visibility="visible" />
 
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/margin_20"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/customer_service"
+                            android:textColor="@color/color_A5A9B3"
+                            android:textSize="@dimen/textSize14sp"/>
+
+                        <TextView
+                            android:id="@+id/tv_service"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/btn_service"
+                            android:textColor="@color/color_025BE8"
+                            android:textSize="@dimen/textSize14sp"/>
+
+                    </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
 
