--- a/app/src/main/res/layout/item_listview_bank_card.xml
+++ b/app/src/main/res/layout/item_listview_bank_card.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_select_bank_card"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:id="@+id/ll_select_bank_card">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_bank_icon"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_bank_default" />
-
-    <TextView
-        android:id="@+id/tv_bank_card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/deposits"
-        android:layout_marginStart="@dimen/margin_14"
-        android:textColor="@color/color_414655"
-        android:textSize="@dimen/textSize14sp" />
-
-    <TextView
-        android:id="@+id/tv_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_weight="1"
-        android:text="sssd"
-        android:layout_marginStart="@dimen/margin_8"
-        android:textColor="@color/color_A5A9B3"
-        android:textSize="@dimen/textSize14sp" />
 
-    <CheckBox
-        android:id="@+id/check_bank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@drawable/checkbox_style"
-        android:checked="false" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_bank_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_bank_default" />
+
+        <TextView
+            android:id="@+id/tv_bank_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_14"
+            android:text="@string/deposits"
+            android:textColor="@color/color_414655"
+            android:textSize="@dimen/textSize14sp" />
+
+        <TextView
+            android:id="@+id/tv_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_8"
+            android:layout_weight="1"
+            android:textColor="@color/color_A5A9B3"
+            android:textSize="@dimen/textSize14sp" />
+
+        <RadioButton
+            android:id="@+id/check_bank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_16"
+            android:button="@drawable/checkbox_style" />
+    </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_1"
+        android:background="@color/colorBackground" />
 
 </LinearLayout>
