--- a/app/src/main/res/layout/tab_odds_detail.xml
+++ b/app/src/main/res/layout/tab_odds_detail.xml
@@ -1,42 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_tab"
     android:layout_width="wrap_content"
-    android:layout_height="42dp"
-    android:layout_marginHorizontal="6dp"
-    android:background="@drawable/shape_odd_category_bg_v4"
-    android:minWidth="100dp">
+    android:layout_height="40dp"
+    android:paddingHorizontal="6dp">
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/tv_tab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="6dp"
-        android:orientation="horizontal">
+        android:minWidth="45dp"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/selector_odd_category_text_v4"
+        android:textSize="@dimen/textSize14sp"
+        tools:ignore="SpUsage"
+        tools:text="14"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <ImageView
-            android:id="@+id/img_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/selector_lcs_icon"
-            android:visibility="gone"
-            tools:visibility="visible"/>
+    <View
+        android:id="@+id/img_icon"
+        android:layout_width="0dp"
+        android:layout_height="3dp"
+        android:background="@drawable/bg_matchtype_indicator_detail"
+        android:layout_gravity="bottom|center_horizontal"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_tab"
+        app:layout_constraintRight_toRightOf="@+id/tv_tab"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
-            android:id="@+id/tv_tab"
-            android:layout_width="wrap_content"
-            android:layout_height="42dp"
-            android:gravity="center"
-
-            android:paddingHorizontal="8dp"
-            android:textAllCaps="true"
-            android:textColor="@color/selector_odd_category_text_v4"
-            android:textSize="@dimen/textSize12sp"
-            tools:ignore="SpUsage"
-            tools:text="受歡迎的" />
-
-    </LinearLayout>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
