--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -366,5 +366,7 @@
     <color name="color_E8F4FF">#E8F4FF</color>
     <color name="color_9CB9CF">#9CB9CF</color>
     <color name="color_F5FAFF">#F5FAFF</color>
+    <color name="color_71ADFF">#71ADFF</color>
+    <color name="color_1971FD">#1971FD</color>
 
 </resources>
