--- a/app/src/main/res/layout/content_baseball_status.xml
+++ b/app/src/main/res/layout/content_baseball_status.xml
@@ -15,8 +15,8 @@
             android:id="@+id/league_odd_match_bb_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_CCCCCC_000000"
-            android:textSize="@dimen/textSize12sp"
+            android:textColor="@color/color_6C7BA8"
+            android:textSize="@dimen/textSize10sp"
             android:visibility="gone"
             tools:text="10"
             tools:visibility="visible" />
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:textColor="@color/color_CCCCCC_000000"
+            android:textColor="@color/color_6C7BA8"
             android:textSize="@dimen/textSize12sp"
             android:visibility="gone"
             tools:text="@string/game_out"
