--- a/app/src/main/res/drawable/selector_star_v4.xml
+++ b/app/src/main/res/drawable/selector_star_v4.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_star_selected_v4" android:state_selected="true" />
-    <item android:drawable="@drawable/ic_icon_star" />
+    <item android:drawable="@drawable/ic_collection_sel" android:state_selected="true" />
+    <item android:drawable="@drawable/ic_collection_nor" />
 </selector>
