--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -124,6 +124,7 @@
     <color name="play_category_stroke_color">#317FFF</color>
     <color name="play_category_solid_color">#317FFF</color>
     <!--endregion 特殊處理顏色-->
+    <color name="color_E8EFFD">#E8EFFD</color>
 
 
 </resources>
