--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -26,9 +26,12 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="15dp"
+        android:background="@color/colorRedLight"
         app:cvHint="@string/hint_current_login_password"
         app:cvInputType="textPassword"
         app:cvTitle="@string/current_login_password" />
+
+
 
     <org.cxct.sportlottery.ui.login.LoginEditText
         android:id="@+id/et_new_password"
@@ -50,6 +53,8 @@
         app:cvInputType="textPassword"
         app:cvTitle="@string/confirm_password" />
 
+
+
     <Button
         android:id="@+id/btn_confirm"
         style="?android:attr/borderlessButtonStyle"
@@ -64,5 +69,28 @@
         android:text="@string/btn_confirm"
         android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp" />
+
+    <org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes
+        android:id="@+id/et_verification_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:hideSelectedTitle="true"
+        app:isResponsiveIconColor="false"
+        app:primaryColor="@color/color_AFAFB1"
+        app:singleText="@string/verification_code"
+        app:singleTextStyle="normal">
+
+        <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+            android:id="@+id/eet_verification_code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textColor="@color/color_FFFFFF_DE000000"
+            android:textSize="@dimen/textSize14sp" />
+
+    </org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes>
 
 </LinearLayout>
