--- a/app/src/main/res/layout/view_odds_detail_toolbar.xml
+++ b/app/src/main/res/layout/view_odds_detail_toolbar.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="fragment"
-            type="org.cxct.sportlottery.ui.base.BaseFragment" />
+            type="org.cxct.sportlottery.ui.game.detail.SportDetailActivity" />
 
         <variable
             name="gameViewModel"
@@ -33,7 +33,7 @@
             android:id="@+id/iv_back"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:onClick="@{() -> fragment.back()}"
+            android:onClick="@{() -> fragment.finish()}"
             android:padding="16dp"
             android:tint="@color/color_AEAEAE_404040"
             android:src="@drawable/ic_arrow_left_game_back"
@@ -419,7 +419,7 @@
                 app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
-                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/txvOut"
                 app:layout_constraintTop_toBottomOf="@+id/tv_away_name"
                 tools:text="第一節14-15 第二節15-14"
