--- a/app/src/main/res/layout/activity_modify_profile_info.xml
+++ b/app/src/main/res/layout/activity_modify_profile_info.xml
@@ -19,9 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="77dp"
         android:layout_gravity="center"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:background="@color/exo_white"
         android:gravity="center"
         android:orientation="vertical">
@@ -60,9 +58,7 @@
         android:id="@+id/ll_real_name"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginBottom="4dp"
         android:background="@color/exo_white"
         android:gravity="center"
@@ -109,9 +105,7 @@
         android:id="@+id/ll_qq_number"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginBottom="4dp"
         android:background="@color/exo_white"
         android:gravity="center"
@@ -159,9 +153,7 @@
         android:id="@+id/ll_e_mail"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginBottom="4dp"
         android:background="@color/exo_white"
         android:gravity="center"
@@ -203,9 +195,7 @@
         android:id="@+id/ll_phone_number"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginBottom="4dp"
         android:background="@color/exo_white"
         android:gravity="center"
@@ -247,9 +237,7 @@
         android:id="@+id/ll_wechat"
         android:layout_width="match_parent"
         android:layout_height="77dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginBottom="4dp"
         android:background="@color/exo_white"
         android:gravity="center"
@@ -297,7 +285,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
-        android:background="@drawable/bg_radius_20_button_dusk"
+        android:background="@drawable/ic_submit"
         android:minWidth="135dp"
         android:minHeight="36dp"
         android:text="@string/btn_confirm"
