--- a/app/src/main/res/layout-night/view_base_tool_bar_no_drawer.xml
+++ b/app/src/main/res/layout-night/view_base_tool_bar_no_drawer.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_191919"
-    tools:context="org.cxct.sportlottery.ui.common.CustomTopToolbar"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context="org.cxct.sportlottery.ui.common.CustomTopToolbar">
 
     <TextView
         android:id="@+id/tv_toolbar_title"
@@ -27,5 +27,15 @@
         android:paddingHorizontal="20dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_icon_arrow_white" />
+
+    <TextView
+        android:id="@+id/tv_toolbar_title_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|right"
+        android:layout_marginEnd="@dimen/margin_20"
+        android:textColor="@color/color_FFFFFF_FFFFFF"
+        android:textSize="@dimen/textSize14sp"
+        android:visibility="gone" />
 </FrameLayout>
 
