--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_141414_F3F4F5"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
+    android:background="@color/color_F0F5FA"
     android:orientation="vertical"
     tools:context=".ui.profileCenter.changePassword.SettingPasswordActivity">
 
@@ -17,43 +15,110 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:firstTabText="@string/login_password"
-        app:secondTabText="@string/withdraw_password"/>
+        android:background="@color/exo_white"
+        android:layout_marginTop="@dimen/margin_1"
+        app:secondTabText="@string/withdraw_password" />
 
-    <org.cxct.sportlottery.ui.login.LoginEditText
-        android:id="@+id/et_current_password"
+
+    <org.cxct.sportlottery.widget.scrollview.MyScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="15dp"
-        android:background="@color/colorRedLight"
-        app:cvHint="@string/hint_current_login_password"
-        app:cvInputType="textPassword"
-        app:cvTitle="@string/current_login_password" />
+        android:overScrollMode="never"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:background="@color/exo_white"
+        tools:layout_editor_absoluteX="0dp">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginEnd="@dimen/margin_20"
 
+            android:focusableInTouchMode="true">
 
-    <org.cxct.sportlottery.ui.login.LoginEditText
-        android:id="@+id/et_new_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        app:cvHint="@string/hint_register_password"
-        app:cvInputType="textPassword"
-        app:cvTitle="@string/new_password" />
+            <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                android:id="@+id/et_current_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:endIcon="@drawable/ic_eye_close"
+                app:hintText="@string/hint_current_login_password"
+                app:isResponsiveIconColor="false"
+                app:labelText="@string/current_login_password"
+                app:labelTextStyle="normal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:primaryColor="@color/color_AFAFB1">
 
-    <org.cxct.sportlottery.ui.login.LoginEditText
-        android:id="@+id/et_confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        app:cvHint="@string/hint_confirm_new_password"
-        app:cvInputType="textPassword"
-        app:cvTitle="@string/confirm_password" />
+                <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                    android:id="@+id/eet_current_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:textColor="@color/color_FFFFFF_DE000000"
+                    android:textSize="@dimen/textSize14sp" />
 
+            </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
 
+            <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                android:id="@+id/et_new_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:endIcon="@drawable/ic_eye_close"
+                app:hintText="@string/hint_current_login_password"
+                app:isResponsiveIconColor="false"
+                app:labelText="@string/new_password"
+                app:labelTextStyle="normal"
+                app:layout_constraintTop_toBottomOf="@+id/et_current_password"
+                app:primaryColor="@color/color_AFAFB1">
+
+                <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                    android:id="@+id/eet_new_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:textColor="@color/color_FFFFFF_DE000000"
+                    android:textSize="@dimen/textSize14sp" />
+
+            </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
+
+            <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                android:id="@+id/et_confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:endIcon="@drawable/ic_eye_close"
+                app:hintText="@string/hint_current_login_password"
+                app:isResponsiveIconColor="false"
+                app:labelText="@string/confirm_password"
+                app:labelTextStyle="normal"
+                app:layout_constraintTop_toBottomOf="@+id/et_new_password"
+                app:primaryColor="@color/color_AFAFB1">
+
+                <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                    android:id="@+id/eet_confirm_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:textColor="@color/color_FFFFFF_DE000000"
+                    android:textSize="@dimen/textSize14sp" />
+
+            </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </org.cxct.sportlottery.widget.scrollview.MyScrollView>
 
     <Button
         android:id="@+id/btn_confirm"
@@ -61,36 +126,15 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
-        android:background="@drawable/bg_radius_20_button_dusk"
+        android:background="@drawable/ic_submit"
         android:minWidth="135dp"
         android:minHeight="36dp"
         android:text="@string/btn_confirm"
         android:textColor="@color/color_FCFCFC"
-        android:textSize="@dimen/textSize14sp" />
+        android:textSize="@dimen/textSize14sp"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
 
-    <org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes
-        android:id="@+id/et_verification_code"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:hideSelectedTitle="true"
-        app:isResponsiveIconColor="false"
-        app:primaryColor="@color/color_AFAFB1"
-        app:singleText="@string/verification_code"
-        app:singleTextStyle="normal">
-
-        <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-            android:id="@+id/eet_verification_code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:imeOptions="actionNext"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textColor="@color/color_FFFFFF_DE000000"
-            android:textSize="@dimen/textSize14sp" />
-
-    </org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes>
 
 </LinearLayout>
