--- a/app/src/main/res/layout/text_form_field_boxes_layout.xml
+++ b/app/src/main/res/layout/text_form_field_boxes_layout.xml
@@ -13,11 +13,10 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/text_field_boxes_imageView"
-            android:layout_width="@dimen/icon_signifier_width"
-            android:layout_height="@dimen/icon_signifier_height"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="@dimen/margin_5"
+            android:layout_marginEnd="@dimen/margin_5"
             android:background="@null"
             android:contentDescription="icon"
             android:visibility="visible" />
