--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -368,5 +368,7 @@
     <color name="color_F5FAFF">#F5FAFF</color>
     <color name="color_71ADFF">#71ADFF</color>
     <color name="color_1971FD">#1971FD</color>
+    <color name="color_D3DEF5">#D3DEF5</color>
+
 
 </resources>
