--- a/app/src/main/res/drawable/bg_radius_4_button_f0f8ff_light.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_f0f8ff_light.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="#F7F8FC" />
+    <solid android:color="#F0F8FF" />
+    <stroke android:color="#1B73FF" android:width="1dp" />
 </shape>
