--- a/app/src/main/res/layout/content_odds_detail_list_group_4_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_group_4_item.xml
@@ -1,7 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:elevation="5dp"
+    android:background="@drawable/bg_radius_10_fff">
 
     <include layout="@layout/content_odds_detail_list_one_include" />
 
