--- a/app/src/main/res/layout/content_odds_detail_list_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_item.xml
@@ -1,41 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cl_item"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:background="@color/color_212121_ededed"
-    tools:ignore="SpUsage">
+    android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_item"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        tools:ignore="SpUsage">
 
+        <ImageView
+            android:id="@+id/viewLeftLine"
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_detail_odd_title_line"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_game_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:textColor="@color/color_CCCCCC_000000"
-        android:textSize="@dimen/textSize14sp"
-        android:gravity="center_vertical"
-        android:textAllCaps="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/odd_detail_pin"
-        tools:text="进球 : 大小" />
+        <TextView
+            android:id="@+id/tv_game_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:textColor="@color/color_414655"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:fontFamily="@font/helvetica"
+            app:layout_constraintLeft_toRightOf="@+id/viewLeftLine"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="进球 : 大小" />
 
+        <ImageView
+            android:id="@+id/odd_detail_pin"
+            android:layout_width="22dp"
+            android:layout_height="match_parent"
+            app:tint="@color/color_C9CFD7"
+            android:padding="5dp"
+            android:layout_marginEnd="13dp"
+            android:src="@drawable/selector_item_country_league_pin_v4"
+            app:layout_constraintRight_toLeftOf="@+id/odd_detail_fold"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/odd_detail_pin"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:padding="4dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:src="@drawable/selector_item_country_league_pin_v4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/odd_detail_fold"
+            android:layout_width="21dp"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:rotation="180"
+            app:tint="@color/color_C9CFD7"
+            android:layout_marginEnd="7dp"
+            android:src="@drawable/ic_arrow_down_double"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/view_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_D3DEF5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <View
+        android:id="@+id/spaceTitle"
+        android:layout_width="match_parent"
+        android:layout_height="7dp" />
+</LinearLayout>
+
 
