--- a/app/src/main/res/layout/content_odds_detail_list_single_2_cs_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_single_2_cs_item.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:ignore="SpUsage">
+    tools:ignore="SpUsage"
+    android:elevation="5dp"
+    android:background="@drawable/bg_radius_10_fff">
 
 
     <include layout="@layout/content_odds_detail_list_item" />
@@ -49,9 +51,9 @@
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
         android:overScrollMode="never"
-        android:paddingStart="@dimen/activity_vertical_margin"
-        android:paddingEnd="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingStart="@dimen/odd_item_horizontal_left"
+        android:paddingEnd="@dimen/odd_item_horizontal_left"
+        android:paddingBottom="@dimen/odd_item_horizontal_left"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         tools:itemCount="2"
