--- a/app/src/main/res/layout/content_type_eps_item.xml
+++ b/app/src/main/res/layout/content_type_eps_item.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:text="意大利落后反超获胜" />
 
-    <org.cxct.sportlottery.ui.game.widget.OddsButton
+    <org.cxct.sportlottery.ui.game.widget.OddsButtonDetail
         android:id="@+id/button_odds"
         android:layout_width="92dp"
         android:layout_height="48dp"
