--- a/app/src/main/res/layout/content_type_one_list_item.xml
+++ b/app/src/main/res/layout/content_type_one_list_item.xml
@@ -7,7 +7,7 @@
     tools:ignore="SpUsage">
 
 
-    <org.cxct.sportlottery.ui.game.widget.OddsButton
+    <org.cxct.sportlottery.ui.game.widget.OddsButtonDetail
         android:id="@+id/button_odds"
         android:layout_width="match_parent"
         android:layout_height="48dp"
