--- a/app/src/main/res/layout/view_detail_head_toolbar.xml
+++ b/app/src/main/res/layout/view_detail_head_toolbar.xml
@@ -157,6 +157,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_home_logo"
